# DataAcquirer

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt  run.py  启动.bat
config/presets/: example.json
scripts/: generate_icon.py
src/data_acquirer/: __init__.py  __main__.py  bookmarks.py  cli.py  config.py  history.py  paths.py
src/data_acquirer/core/: __init__.py  puller.py
src/data_acquirer/ui/: __init__.py  app.py  autocomplete.py  points_table.py  widgets.py  worker.py
tests/: test_history.py  test_progress_messages.py
