[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "data-acquirer"
version = "1.0.0"
description = "Visual InfluxDB (v1 / InfluxQL) time-series data puller"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "influxdb>=5.3.1",
    "pandas>=1.3",
]

[project.scripts]
data-acquirer = "data_acquirer.ui:main"

[tool.setuptools.packages.find]
where = ["src"]
